@@ -170,7 +170,7 @@ namespace EFEnumerationDemo
 
                     // Output the generated query as readable text:
                     // (((((((Id == 5) AND (Id != 6)) AND ((Id > 10) AND (Id < 5))) AND ((Id >= 15) OR (Id <= 7))) AND (1, 2, 3) Contains Id) OR NOT ((4, 5, 6) Contains Id)) OR ((((((Description == '#10') AND (Description != '#100')) AND Description Contains '2') AND NOT (Description Contains '3')) AND Description StartsWith '#') AND Description EndsWith '55'))
-                    var queryString = filterBuilder.AsQueryString();
+                    var queryString = filterBuilder.ToQueryString();
 
                     Console.WriteLine();
                     Console.WriteLine($"Filter as query string: {queryString}");
